<resources>
    <string name="app_name">HumanCharacteristics</string>
    <string name="setting_name">Setting</string>
    <string name="storage">Storage</string>
    <string name="start">Start</string>
    <string name="exit">Exit</string>
    <string name="author">Author</string>
    <string name="text_comment">Type your comment</string>
    <string name="text_phone">Type phone number</string>
    <string name="text_email">Type email</string>
    <string name="tittle_email">Email</string>
    <string name="tittle_phone">Phone</string>
    <string name="tittle_comment">"Comment : "</string>
    <string name="delete">Delete</string>
    <string name="your_name">Your name</string>
    <string name="you_age">18</string>
    <string name="emotion_setting">Emotion</string>
    <string name="characteristic_setting">Characteristic</string>
    <string name="gender_setting">Gender</string>
    <string name="amount_setting">Amount</string>
    <string name="description_amount">Display amount of face detect</string>
    <string name="toask_default_setting">Default value setting</string>
    <string name="add">Add</string>
    <string name="save_button">Save</string>
    <string name="alert_succsess">Add succsess</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="update_Button">Update</string>
    <string name="save">Save</string>
    <string name="saving">Type name</string>
    <string name="saved">Saved</string>
    <string name="type_name_here">Type name here</string>
    <string name="default_name">Unknown</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="attractiveness">Attractiveness</string>
    <string name="wait_model">Loading</string>
    <string name="wait_for_detect">Wait For Detect</string>
    <string name="attractive_am3_am2">The attractive is low</string>
    <string name="attractive_am1_1">The attractive is normal</string>
    <string name="attractive_2_3">The attractive is high</string>
    <string name="competent_am3_am2">The competent is low</string>
    <string name="competent_am1_1">The competent is normal</string>
    <string name="competent_2_3">The competent is high</string>
    <string name="dominant_am3_am2">The dominant is low</string>
    <string name="dominant_am1_1">The dominant is normal</string>
    <string name="dominant_2_3">The dominant is high</string>
    <string name="extroverted_am3_am2">The extroverted is low</string>
    <string name="extroverted_am1_1">The extroverted is normal</string>
    <string name="extroverted_2_3">The extroverted is high</string>
    <string name="likeability_am3_am2">The likeability is low</string>
    <string name="likeability_am1_1">The likeability is normal</string>
    <string name="likeability_2_3">The likeability is high</string>
    <string name="thread_am3_am2">The thread is low</string>
    <string name="thread_am1_1">The thread is normal</string>
    <string name="thread_2_3">The thread is high</string>
    <string name="trustworthy_am3_am2">The trustworthy is low</string>
    <string name="trustworthy_am1_1">The trustworthy is normal</string>
    <string name="trustworthy_2_3">The trustworthy is high</string>
    <string name="updated_inforhuman">Update</string>
    <string name="back_screen">Back</string>
    <string name="search_name">Search Name Here</string>
    <string name="navigation_start">Navigation</string>
    <string name="click_to_view_more">Click to view more</string>
    <string name="select_more">Select more</string>
    <string name="recognizing_face_value">Recognizing</string>
</resources>
