<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp"
        style="@style/HomePage"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/buttonStart"
            style="@style/CodeFont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:textAllCaps="false"
            android:layout_marginTop="50dp"
            android:background="@drawable/button_selector"
            android:text="@string/start"
            android:textSize="@dimen/text_size_button_40" />

        <Button
            android:id="@+id/buttonStorage"
            style="@style/CodeFont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/buttonStart"
            android:textAllCaps="false"
            android:layout_marginTop="@dimen/margin_top"
            android:background="@drawable/button_selector"
            android:text="@string/storage"
            android:textSize="@dimen/text_size_button_40" />

        <Button
            android:id="@+id/buttonSetting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/buttonStorage"
            android:layout_marginTop="@dimen/margin_top"
            android:background="@drawable/button_selector"
            style="@style/CodeFont"
            android:textSize="@dimen/text_size_button_40"
            android:text="@string/setting_name" />

        <Button
            android:id="@+id/buttonCopyright"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/buttonSetting"
            android:layout_marginTop="@dimen/margin_top"
            android:textAllCaps="false"
            android:background="@drawable/button_selector"
            style="@style/CodeFont"
            android:textSize="@dimen/text_size_button_40"
            android:text="@string/author" />

        <Button
            android:id="@+id/buttonExit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/buttonCopyright"
            android:layout_marginTop="@dimen/margin_top"
            android:background="@drawable/button_selector"
            style="@style/CodeFont"
            android:textSize="@dimen/text_size_button_40"
            android:textAllCaps="false"
            android:text="@string/exit" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
