<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp"
        tools:ignore="MissingConstraints">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="500px"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:id="@+id/frameLayout">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/tittleEmail"
                android:layout_centerHorizontal="true"
                app:srcCompat="@mipmap/so1" />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Your name"
                android:id="@+id/textView"
                android:gravity="center"
                android:layout_marginTop="100dp"
                android:padding="10dp" />

            <TextView
                android:id="@+id/textAge"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="150dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="Age"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="right"
                android:layout_marginTop="100dp"
                app:srcCompat="@mipmap/pen" />

        </FrameLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/frameLayout"
            android:background="@drawable/background_border"
            android:padding="15dp"

            android:layout_centerHorizontal="true">

            <TextView
                android:id="@+id/titleComment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:textSize="@dimen/tittle"
                android:background="@color/colorTittle"
                android:text="Comment" />

            <TextView
                android:id="@+id/textViewComment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/titleComment"
                android:layout_marginTop="13dp"
                android:text="@string/text_comment" />

            <TextView
                android:id="@+id/titlePhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textViewComment"
                android:layout_marginTop="15dp"
                android:background="@color/colorTittle"
                android:textSize="@dimen/tittle"
                android:text="Phone" />

            <TextView
                android:id="@+id/textViewPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/titlePhone"
                android:layout_marginTop="13dp"
                android:text="@string/text_phone" />

            <TextView
                android:id="@+id/tittleEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textViewPhone"
                android:layout_marginTop="25dp"
                android:textSize="@dimen/tittle"
                android:background="@color/colorTittle"
                android:text="@string/text_email" />

            <TextView
                android:id="@+id/textViewEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/tittleEmail"
                android:layout_marginTop="13dp"
                android:text="TextView" />

        </RelativeLayout>

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>